--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .bg-blue {
   background-color: #03a9f5;
 }
@@ -107,4 +110,24 @@ footer a {
   .text-trio {
     flex-direction: column;
   }
+}
+
+
+footer .row{
+  position: relative;
+}
+.back-to-top {
+  font-size: 1.8rem;
+  line-height: 1.8em;
+  width: 2em;
+  height: 2em;
+  background-color: #eb1e61;
+  border-radius: 50%;
+  position: absolute;
+  top: -1em;
+  right: -0.7em;
+  text-align: center;
+  box-shadow: 0 0.2em 0.4em #0006;
+  text-decoration: none;
+
 }
