--- a/css/pages/coming-soon.css
+++ b/css/pages/coming-soon.css
@@ -2,7 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 .bg-blue {
-  background-color: #03a9f5;
+  background-color: var(--color-primary);
 }
 
 .hero {
@@ -56,7 +56,7 @@ html {
   color: #555;
 }
 .section-description > a {
-  color: #eb1e61;
+  color: var(--color-secondary);
   text-decoration: none;
 }
 
@@ -104,11 +104,37 @@ footer a {
 .text-trio {
   display: flex;
   gap: 0 30px;
+  
 }
+
+.text-trio p {
+  
+  position: relative;
+}
+
+.text-trio p::after{
+  content: '';
+  display: inline-block;
+  width: 2px;
+  height: 16px;
+  color: white;
+  position: absolute;
+  top: 0px;
+  right: -16px;
+  transform: translateX(50%) translateY(-50%);
+}
+.text-trio p:last-child::after{
+ 
+  display: none;
+} 
+
 
 @media (max-width: 700px) {
   .text-trio {
     flex-direction: column;
+  }
+  .text-trio p::after{
+    display: none;
   }
 }
 
@@ -121,13 +147,13 @@ footer .row{
   line-height: 1.8em;
   width: 2em;
   height: 2em;
-  background-color: #eb1e61;
+  background-color: var(--color-secondary);
   border-radius: 50%;
   position: absolute;
   top: -1em;
   right: -0.7em;
   text-align: center;
-  box-shadow: 0 0.2em 0.4em #0006;
+  box-shadow: var(--shadow);
   text-decoration: none;
 
 }
